# ai-invention-3bc3de-sentence-length-standardization-reveals-

./: README.md
dataset_iter1_ud_ddm_dataset/: README.md
dataset_iter1_ud_ddm_dataset/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter1_ud_ddm_dataset/src/: data.py  pyproject.toml
dataset_iter1_ud_ddm_records/: README.md
dataset_iter1_ud_ddm_records/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter1_ud_ddm_records/src/: data.py  mini_data_out.json  preview_data_out.json  pyproject.toml
dataset_iter1_ud_wals_typolog/: README.md
dataset_iter1_ud_wals_typolog/demo/: data_code_demo.ipynb  demo_result.json
dataset_iter1_ud_wals_typolog/src/: build_dataset.py  data.py  data_out.json  full_data_out.json  mini_data_out.json  preview_data_out.json  pyproject.toml
experiment_iter2_case_length_ddm/: README.md
experiment_iter2_case_length_ddm/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter2_case_length_ddm/src/: full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter2_cox_ph_models/: README.md
experiment_iter2_cox_ph_models/src/: method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter2_ddm_feasibility/: README.md
experiment_iter2_ddm_rankings/: README.md
experiment_iter2_ddm_synthesis/: README.md
paper_latex/: paper.tex  references.bib
research_iter1_ddm_formulas/: README.md
research_iter1_ud_typology_map/: README.md
(+38 files in other folders)
