[project]
name = "exp-id2-it2-cox-ph"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "autograd==1.8.0",
    "autograd-gamma==0.5.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.62.1",
    "formulaic==1.2.1",
    "interface-meta==1.3.0",
    "kiwisolver==1.5.0",
    "lifelines==0.30.3",
    "loguru==0.7.3",
    "matplotlib==3.10.8",
    "narwhals==2.18.1",
    "numpy==2.4.3",
    "packaging==26.0",
    "pandas==2.3.3",
    "pillow==12.1.1",
    "psutil==7.2.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "scipy==1.17.1",
    "six==1.17.0",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "wrapt==2.1.2",
]
